--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     <div class="buttons">
         <div class="space"></div>
         <div class="space"></div>
-        <div class="follow"><p >follow us on</p></div>
+        <div class="follow"><p >follow us ona7aaaa</p></div>
         
       <a href="https://www.instagram.com/cursedescaperooms/"><img src="images/instagram logo.png" alt=""></a> 
       <a href="https://www.facebook.com/CursedEscapeRooms/"><img src="images/facebook logo (1).png" alt=""></a> 
