--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <div class="space"></div>
     <div class="space"></div>
     <div>
-        <p id="working">Working Hours from 3pm to 1 am</p>
+        <p id="working">Working Hours from a7a 3pm to 1 am</p>
     </div>
 
     <div class="space"></div>
@@ -150,7 +150,7 @@
     <div class="buttons">
         <div class="space"></div>
         <div class="space"></div>
-        <div class="follow"><p >follow us ona7aaaa</p></div>
+        <div class="follow"><p >follow us on</p></div>
         
       <a href="https://www.instagram.com/cursedescaperooms/"><img src="images/instagram logo.png" alt=""></a> 
       <a href="https://www.facebook.com/CursedEscapeRooms/"><img src="images/facebook logo (1).png" alt=""></a> 
