--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <div class="space"></div>
     <div class="space"></div>
     <div>
-        <p id="working">Working Hours from a7a 3pm to 1 am</p>
+        <p id="working">Working Hours from 3pm to 1 am</p>
     </div>
 
     <div class="space"></div>
@@ -126,19 +126,19 @@
                     position: relative;
                     text-align: right;
                     width: 100%;
-                    height: 400px;
+                    height: 300px;
                 }
 
                 .gmap_canvas {
                     overflow: hidden;
                     background: none !important;
                     width: 100%;
-                    height: 400px;
+                    height: 300px;
                 }
 
                 .gmap_iframe {
                     width: 100% !important;
-                    height: 400px !important;
+                    height: 300px !important;
                 }
             </style>
         </div>
