--- a/index.html
+++ b/index.html
@@ -133,15 +133,18 @@
                     overflow: hidden;
                     background: none !important;
                     width: 100%;
-                    height: 300px;
+                    height: 200px;
                 }
 
                 .gmap_iframe {
                     width: 100% !important;
-                    height: 300px !important;
+                    height: 200px !important;
                 }
             </style>
         </div>
+        <div class="space"></div>
+        <div class="space"></div>
+        <div class="space"></div>
     </div>
     <div class="space"></div>
     <div class="space"></div>
@@ -150,7 +153,7 @@
     <div class="buttons">
         <div class="space"></div>
         <div class="space"></div>
-        <div class="follow"><p >follow us on</p></div>
+        <div class="follow"><p>follow us on</p></div>
         
       <a href="https://www.instagram.com/cursedescaperooms/"><img src="images/instagram logo.png" alt=""></a> 
       <a href="https://www.facebook.com/CursedEscapeRooms/"><img src="images/facebook logo (1).png" alt=""></a> 
